[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/board/CardSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/white_card.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/fonts/Bitter-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/recruitment/Recruitment.gd" type="Script" id=4]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Recruitment" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Polygon2D" parent="."]
z_index = -5
z_as_relative = false
color = Color( 0.117647, 0.117647, 0.117647, 1 )
polygon = PoolVector2Array( 0, 0, 1088, 0, 1088, 340, 0, 340 )

[node name="Elements" type="Node2D" parent="."]
z_index = -4

[node name="DismissBorder" type="Panel" parent="Elements"]
margin_left = 858.0
margin_top = 58.0
margin_right = 1018.0
margin_bottom = 282.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DismissLabel" type="Label" parent="Elements"]
margin_left = 860.0
margin_top = 290.0
margin_right = 1016.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Dismiss Unit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel1" type="Label" parent="Elements"]
margin_left = 72.0
margin_top = 290.0
margin_right = 228.0
margin_bottom = 324.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Cost:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel2" type="Label" parent="Elements"]
margin_left = 270.0
margin_top = 290.0
margin_right = 430.0
margin_bottom = 324.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Cost:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel3" type="Label" parent="Elements"]
margin_left = 470.0
margin_top = 290.0
margin_right = 630.0
margin_bottom = 324.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Cost:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battle" type="Button" parent="Elements"]
margin_left = 666.0
margin_top = 150.0
margin_right = 816.0
margin_bottom = 202.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BATTLE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSlot1" parent="." instance=ExtResource( 1 )]
position = Vector2( 150, 170 )
slot_color = Color( 0.894118, 0.741176, 0.12549, 1 )
type = 2

[node name="CardSlot2" parent="." instance=ExtResource( 1 )]
position = Vector2( 350, 170 )
slot_color = Color( 0.894118, 0.741176, 0.12549, 1 )
type = 2

[node name="CardSlot3" parent="." instance=ExtResource( 1 )]
position = Vector2( 550, 170 )
slot_color = Color( 0.894118, 0.741176, 0.12549, 1 )
type = 2

[node name="DismissSlot" parent="." instance=ExtResource( 1 )]
position = Vector2( 938, 170 )
type = 3
[connection signal="pressed" from="Elements/Battle" to="." method="_on_Battle_pressed"]
